fixed get mapping to remove existing appointment times from list of available date times